[package]
name = "cufinder-rust"
version = "1.0.0"
edition = "2024"
description = "Rust SDK for the CUFinder API"
license = "MIT"
repository = "https://github.com/cufinder/cufinder-rust"
keywords = ["cufinder", "cufinder-sdk", "rust-sdk"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"